--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,72 @@
 html, body { 
 	height: 100%; margin: 0; padding: 0; 
+	width: 100%;	
+	display: -webkit-box;
+  	display: -moz-box;
+  	display: -ms-flexbox;
+  	display: -webkit-flex;
+  	display: flex;  
+  
+  	-webkit-flex-flow: row wrap;
+  	flex-flow: row wrap;
+  
+  	font-weight: bold;  	
+  	background-color: black;
 }
 
-#map {
-	height: 100%;
+.inputFilterContainer{
+	display: block;
+	margin-left: auto;
+  	margin-right: auto;
+  	margin-top: 10px;
+  	padding: 10px;
+  	width: 100%;
+}
+
+.inputfilter{	
+	margin-left: auto;
+  	margin-right: auto;
+  	width: 100%;
+}
+
+.listContainer{
+	display: block;
+	width: 20%;
+	margin-left: auto;
+  	margin-right: auto;
+}
+
+ul {
+	padding-left: 20px;	
+}
+
+ul li {
+    background: #cce5ff;
+    margin: 5px;
+}
+
+li {
+  color: red;
+}
+li span {
+  color: black;
+}
+
+.mapContainer {
+	height: 100%;	
+	width: 80%;
+}
+
+@media all and (max-width: 800px) {
+	.inputFilterContainer{		
+		flex: 1 100%;	
+	}
+
+	.listContainer{		
+		flex: 1 100%;	
+	}
+
+	.mapContainer{		
+		flex: 1 100%;
+	}
 }
