--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ html, body {
   	margin-top: 10px;
   	padding: 10px;
   	width: 100%;
+  	height: 5%;	
 }
 
 .inputfilter{	
@@ -33,7 +34,7 @@ html, body {
 	display: block;
 	width: 20%;
 	margin-left: auto;
-  	margin-right: auto;
+  	margin-right: auto;  	
 }
 
 ul {
@@ -53,20 +54,33 @@ li span {
 }
 
 .mapContainer {
-	height: 100%;	
+	height: 80%;	
 	width: 80%;
+}
+
+.foursquareContainer {
+	height: 15%;	
+	width: 100%;
 }
 
 @media all and (max-width: 800px) {
 	.inputFilterContainer{		
 		flex: 1 100%;	
+		order: 1;
 	}
 
 	.listContainer{		
 		flex: 1 100%;	
+		order: 2;
+	}
+
+	.foursquareContainer{
+		flex: 1 100%;
+		order: 3;
 	}
 
 	.mapContainer{		
 		flex: 1 100%;
+		order: 4;
 	}
 }
