--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,11 @@ html, body {
   	background-color: black;
 }
 
+h2 {
+	font-weight: bold;  	
+  	color: white;	
+}
+
 .inputFilterContainer{
 	display: block;
 	margin-left: auto;
